<!--
  ~
  ~ Copyright 2017 Mario Contreras <marioc@nazul.net>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">GUI Test</string>
    <string name="menu_save">Save</string>
    <string name="hintName">Enter your name</string>
    <string name="hintPhone">Enter your phone</string>
    <string name="textScholarship">Scholarship</string>
    <string name="textSportsPractice">Sports Practice</string>
    <string name="textFavoriteBook">Favorite Book</string>
    <string name="btnClear">Clear</string>
    <string-array name="scholarship">
        <item>High school</item>
        <item>Technician</item>
        <item>Bachelor\'s degree</item>
        <item>Master\'s degree</item>
        <item>Ph. D.</item>
    </string-array>
    <string-array name="books">
        <item>Jurassic Park</item>
        <item>The Hound of the Baskervilles</item>
        <item>Rapid Development</item>
        <item>Ready Player One</item>
        <item>Harry Potter and the prisoner of Azkaban</item>
    </string-array>
    <string name="textGender">Gender</string>
    <string name="textMale">Male</string>
    <string name="textFemale">Female</string>
    <string name="textClear">Clear</string>
    <string name="textCancel">Cancel</string>
    <string name="textConfirmClear">Clear all fields?</string>
    <string name="textAllFieldsCleared">All fields were cleared</string>
    <string name="textDataSaved">Name: {1}{0}Phone: {2}{0}Scholarship: {3}{0}Gender: {4}{0}Favorite book: {5}{0}Sports practice: {6}</string>
    <string name="textYes">Yes</string>
    <string name="textNo">No</string>
    <string name="textNoFavBook">(No favorite book was entered)</string>
</resources><!-- EOF -->
